[gd_scene load_steps=2 format=3 uid="uid://bo0ho0ri766jd"]

[ext_resource type="Script" path="res://scripts/dialog/input_name_dialog.gd" id="1_dmnf6"]

[node name="InputNameDialog" type="ConfirmationDialog"]
size = Vector2i(300, 150)
script = ExtResource("1_dmnf6")
input_path = NodePath("VBoxContainer/TextEdit")
error_label_path = NodePath("VBoxContainer/ErrorLabel")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 292.0
offset_bottom = 101.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 36)
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="text_changed" from="VBoxContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
